--- a/2019:5:19.md
+++ b/2019:5:19.md
@@ -1,8 +1,79 @@
-# 2019/5/19
-- カテゴリのソート機能
-	- category_idとidを連携させるために、
-		* **views.py**
-		* **urls.py**
-		* **write/index.html**
+# 2019/5/21　日報(#1,#3)
+
+Categoryのソート機能
+-
+	
+	category_idとidを連携させるために、
+	
+	views.py
+		returnには一つの変数しか記述できないのでcontextsに括っている
+	urls.py
+		int:にはpkでｈなく、views.pyで定義したcategory_idを記述
+	write/index.html
+		urls.pyで定義したcategory_idはcategory.idをあてはめることを記述
+	
 		
-		にcategory_id.idを記述した。
+githubのリポジトリ新規作成
+-
+	
+	①githubでリポジトリを作成
+	
+	②ローカルでフォルダを作り、そこに入りgit clone urlでファイルを持ってくる
+	
+	③git branchでマスターブランチにいることを確認して、git checkout -b nameでブランチを作成して移動する
+	
+	④持ってきたフォルダにmacdownファイルを入れる。
+	
+	⑤git push origin name
+	
+	⑥リポジトリのsettingから人を招待する
+	
+	
+pylintのアンインストール
+-
+
+	pipのパッケージのpylintがvscodeでたくさんエラーを出していたのでpip uninstall pylintでパッケージのアンインストールをした
+
+
+記事件数
+-
+
+	記事件数を取得させようとすると、件数自体は受け取っているのに、intは反復可能ではないと断られてしまい、物として受け取らせようとしたら、0giveが出てしまい、出来なかったので後回しにした。
+	
+	
+ブランチ整理
+-
+
+	git push --delete origin nameでリモートブランチの削除
+	
+	git branch -D nameでローカルブランチの削除
+	
+	git branch -m 元の名前　新しい名前
+	ローカルブランチの名前が変更されたら、リモートブランチを消し、プッシュする
+	
+	マージされる側のブランチ(develop)に移動してgit fetch
+	git branch -rでリモートブランチの名前を確認する
+	git checkout マージする側のブランチ名
+	git checkout マージされる側のブランチ名(develop)
+	git merge マージする側のブランチ名
+	
+	
+	
+会員登録について
+-
+
+	カスタムユーザーの作成、会員登録、ログインに必要な記述を
+	models.py
+	settings.py
+	admin.py
+	views.py
+	urls.py
+	forms.py
+	txt
+	index.html
+	にそれぞれ記述した。
+	最初はValueErrorが出たり、migrateErrorが出たが、基本的にmodels.pyとsettings.pyとadmin.pyを変更し、
+	migrationsの初期化を行い、再度実行することで治るようになり、adminサイトが立ち上がりログインが出来るようになった。
+	以上の記述をした後に、adminサイトへのログインが出来ないことになるが、python manage.py createsuperuserをし、アカウントを作り直したら治った。
+	後はブラウザが開けない状態なので、どこが悪いのかを特定して、書き直す。
+	
